crates/observed_macros_impl/tests/snapshots/event__tests__event_with_field_attrs.snap
---
source: crates/observed_macros/src/event.rs
expression: output
---
const _: () = {
    impl ::observed::Event for MyEvent {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "my.event",
            ::core::option::Option::Some(::core::any::TypeId::of::<MyEvent>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "my.event",
                    ::observed::Severity::Info,
                    ::core::option::Option::None,
                ),
            ),
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "request_id",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("custom_key"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(
                    &FIELD_DESC,
                    &|engine| ::observed::Value::from_redacted(&self.request_id, engine),
                )?;
            }
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "latency",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("latency"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(
                    &FIELD_DESC,
                    &|_| ::observed::Value::from(self.latency.clone()),
                )?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
