crates/observed_macros_impl/tests/snapshots/event__tests__event_with_field_metric.snap
---
source: crates/observed_macros/src/event.rs
expression: output
---
const _: () = {
    impl ::observed::Event for OutgoingRequest {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "outgoing_request",
            ::core::option::Option::Some(::core::any::TypeId::of::<OutgoingRequest>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "outgoing_request",
                    ::observed::Severity::Info,
                    ::core::option::Option::Some("Outgoing request"),
                ),
            ),
            ::core::option::Option::None,
            true,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "method",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("method"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(
                    &FIELD_DESC,
                    &|engine| ::observed::Value::from_redacted(&self.method, engine),
                )?;
            }
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "request_id",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("request_id"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(
                    &FIELD_DESC,
                    &|engine| ::observed::Value::from_redacted(&self.request_id, engine),
                )?;
            }
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "operation",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("operation"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(
                    &FIELD_DESC,
                    &|engine| ::observed::Value::from_redacted(&self.operation, engine),
                )?;
            }
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "duration",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("duration"),
                    ),
                    ::core::option::Option::Some(
                        ::observed::metadata::MetricFieldEntry::instrument(
                            "duration",
                            ::observed::metadata::MetricDescription::new(
                                "request_duration",
                                ::observed::metadata::InstrumentKind::Histogram,
                                "",
                                "ms",
                            ),
                        ),
                    ),
                );
                visitor(
                    &FIELD_DESC,
                    &|_| ::observed::Value::from(self.duration.clone()),
                )?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
