crates/observed_macros_impl/tests/snapshots/event__tests__log_name_override.snap
---
source: crates/observed_macros/src/event.rs
expression: output
---
const _: () = {
    impl ::observed::Event for HttpRequest {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "http.request",
            ::core::option::Option::Some(::core::any::TypeId::of::<HttpRequest>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "http.request.log",
                    ::observed::Severity::Info,
                    ::core::option::Option::None,
                ),
            ),
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "status",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("status"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(&FIELD_DESC, &|_| ::observed::Value::from(self.status.clone()))?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
